monitoring/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager-deployment
  namespace: monitoring
  labels:
    app: alertmanager-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager-server
  template:
    metadata:
      labels:
        app: alertmanager-server
    spec:
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        args:
          - "--config.file=/etc/alertmanager/config.yml"
          - "--storage.path=/alertmanager"
        ports:
          - containerPort: 9093
        volumeMounts:
          - name: alertmanager-config-volume
            mountPath: /etc/alertmanager/
          - name: alertmanager-storage-volume
            mountPath: /alertmanager/
      volumes:
        - name: alertmanager-config-volume
          configMap:
            defaultMode: 420
            name: alertmanager-config
        - name: alertmanager-storage-volume
          emptyDir: {}
